# collectd-ovirt

./: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  config.h.in  configure.ac
include/: Makefile.am  README.md  collectd.h
src/: Makefile.am  README.md  null.c  types.db  virt2.c  virt2.h  virt2_adm.c  vminfo.c  vminfo.h
tests/: Makefile.am  crowded_metadata.xml  fake_collectd.c  fake_libvirt.c  fake_vminfo.c  minimal.xml  minimal_metadata.xml  virt2_test.c  virt2_test.h
